--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo da Vitamina</title>
+    <title>Protocolo Saludable</title>
     
     <style type="text/css">
       body {
